# lib/infrastructure/service/service.go
@@ -7,7 +7,6 @@ import (
 	tool "sqldb-ws/lib"
 	"github.com/rs/zerolog/log"
 	conn "sqldb-ws/lib/infrastructure/connector"
-	entities "sqldb-ws/lib/entities"
 )
 /*
 	Infrastructure is meant as DDD pattern, as a generic accessor to database and distant services. 
@@ -16,19 +15,14 @@ import (
 type InfraService struct {  
 	Name                string       				`json:"name"`
 	User                string       				`json:"-"`
-	Params          	tool.Params       			`json:"-"`
+	Params          	map[string]string       	`json:"-"`
 	Record          	tool.Record       			`json:"-"`
 	Results         	tool.Results      			`json:"-"`
 	Method  	    	tool.Method     			`json:"-"`
 	SuperAdmin 	    	bool		 				`json:"-"`
-	PermService         *PermissionInfo             `json:"-"`
 	NoLog				bool						`json:"-"`
 	db                  *conn.Db
 	tool.InfraServiceItf
-}
-// Auth modificator on PermissionService
-func (service *InfraService) SetAuth(auth bool) {
-	if !auth { service.PermService= nil }
 }
 // Service Builder for Specialized purpose
 func (service *InfraService) SpecializedFill(params tool.Params, record tool.Record, method tool.Method) {
@@ -75,32 +69,10 @@ func EmptyTable(database *conn.Db, name string) *TableInfo {
 	table.Name = name 
 	return table 
 }
-// Generate an Empty TableInfo Service with No Perms (no perm)
-func TableNoPerm(database *conn.Db, admin bool, user string, name string, params tool.Params, record tool.Record, method tool.Method) *TableInfo {
+// Generate an Empty TableInfo Service
+func Table(database *conn.Db, admin bool, user string, name string, params tool.Params, record tool.Record, method tool.Method) *TableInfo {
 	table := &TableInfo{ } 
 	table.db = database 
     table.Fill(name, admin, user, params, record, method)
 	return table
-}
-// Generate an Empty TableInfo Service
-func Table(database *conn.Db, admin bool, user string, name string, params tool.Params, record tool.Record, method tool.Method) *TableInfo {
-	table := TableNoPerm(database, admin, user, name, params, record, method)
-	for _, restricted := range entities.DBRESTRICTED {
-		if table.Name == restricted.Name { table.PermService = nil; break }
-	}
-	return table
-}
-// Generate an Empty PermissionInfo Service
-func Permission(database *conn.Db, admin bool, user string, params tool.Params, record tool.Record, method tool.Method) *PermissionInfo {
-	perms :=  &PermissionInfo { }
-	perms.db = database
-	perms.Perms = map[string]tool.Record{}
-	perms.WarningUpdateField = []string{}
-	perms.Fill(entities.DBPermission.Name, admin, user, params, record, method)
-    perms.Row = &TableRowInfo{ } 
-	perms.Row.Table = EmptyTable(database, entities.DBPermission.Name)
-	perms.Row.db = database
-	perms.Row.Fill(entities.DBPermission.Name, admin, user, tool.Params{}, tool.Record{}, tool.SELECT,)
-	perms.Row.PermService=nil
-	return perms
 }
