# swagger/swagger.yml
@@ -15,6 +15,24 @@ info:
   title: SqlDB WS API
   version: 1.0.0
 paths:
+  /auth/logcheck:
+    get:
+      description: |-
+        LogCheck Datas
+        <br>
+      operationId: AuthController.LogCheck
+      parameters:
+      - description: 'Authorization Token HEADER '
+        in: header
+        name: Authorization
+        type: string
+      responses:
+        "200":
+          description: '{string} success !'
+        "403":
+          description: no table
+      tags:
+      - auth
   /auth/login:
     post:
       description: |-
@@ -89,12 +107,20 @@ paths:
         in: query
         name: dir
         type: string
+      - description: (Optionnal) Value of limit
+        in: query
+        name: limit
+        type: string
+      - description: (Optionnal) Value of offset
+        in: query
+        name: offset
+        type: string
       - description: activate a lightest response (name only)
         in: query
         name: shallow
         type: string
       - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+          format
         in: query
         name: rawview
         type: string
@@ -144,12 +170,20 @@ paths:
         in: query
         name: dir
         type: string
+      - description: (Optionnal) Value of limit
+        in: query
+        name: limit
+        type: string
+      - description: (Optionnal) Value of offset
+        in: query
+        name: offset
+        type: string
       - description: activate a lightest response (name only)
         in: query
         name: shallow
         type: string
       - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+          format
         in: query
         name: rawview
         type: string
@@ -199,12 +233,20 @@ paths:
         in: query
         name: dir
         type: string
+      - description: (Optionnal) Value of limit
+        in: query
+        name: limit
+        type: string
+      - description: (Optionnal) Value of offset
+        in: query
+        name: offset
+        type: string
       - description: activate a lightest response (name only)
         in: query
         name: shallow
         type: string
       - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+          format
         in: query
         name: rawview
         type: string
@@ -260,12 +302,20 @@ paths:
         in: query
         name: dir
         type: string
+      - description: (Optionnal) Value of limit
+        in: query
+        name: limit
+        type: string
+      - description: (Optionnal) Value of offset
+        in: query
+        name: offset
+        type: string
       - description: activate a lightest response (name only)
         in: query
         name: shallow
         type: string
       - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+          format
         in: query
         name: rawview
         type: string
@@ -327,12 +377,20 @@ paths:
         in: query
         name: dir
         type: string
+      - description: (Optionnal) Value of limit
+        in: query
+        name: limit
+        type: string
+      - description: (Optionnal) Value of offset
+        in: query
+        name: offset
+        type: string
       - description: activate a lightest response (name only)
         in: query
         name: shallow
         type: string
       - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+          format
         in: query
         name: rawview
         type: string
@@ -387,146 +445,20 @@ paths:
         in: query
         name: dir
         type: string
-      - description: activate a lightest response (name only)
+      - description: (Optionnal) Value of limit
         in: query
-        name: shallow
+        name: limit
         type: string
-      - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+      - description: (Optionnal) Value of offset
         in: query
-        name: rawview
-        type: string
-      - description: (Optionnal) Value of super
-        in: query
-        name: super
-        type: string
-      - description: 'Authorization Token HEADER '
-        in: header
-        name: Authorization
-        type: string
-      - description: 'Request body '
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/json'
-      responses:
-        "200":
-          description: '{string} success !'
-        "403":
-          description: no table
-      tags:
-      - generic
-  /generic/{table}/{totable}:
-    post:
-      description: |-
-        Link Datas
-        <br>
-      operationId: GenericController.Link
-      parameters:
-      - description: Value of the table
-        in: path
-        name: table
-        required: true
-        type: string
-      - description: Value of the totable
-        in: path
-        name: totable
-        required: true
-        type: string
-      - description: needed on a rows level request (value=all for post/put method
-          or a get/delete all)
-        in: query
-        name: rows
-        type: string
-      - description: needed on a columns level request (POST/PUT/DELETE with no rows
-          query params) will set up a view on row level (show only expected columns)
-        in: query
-        name: columns
-        type: string
-      - description: sets up a sql order in query (don't even try to inject you little
-          joker)
-        in: query
-        name: orderby
-        type: string
-      - description: sets up a sql direction in query (ex.ASC|DESC) (don't even try
-          to inject you little joker)
-        in: query
-        name: dir
+        name: offset
         type: string
       - description: activate a lightest response (name only)
         in: query
         name: shallow
         type: string
       - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
-        in: query
-        name: rawview
-        type: string
-      - description: (Optionnal) Value of super
-        in: query
-        name: super
-        type: string
-      - description: 'Authorization Token HEADER '
-        in: header
-        name: Authorization
-        type: string
-      - description: 'Request body '
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/json'
-      responses:
-        "200":
-          description: '{string} success !'
-        "403":
-          description: no table
-      tags:
-      - generic
-  /generic/{table}/{totable}/delete:
-    post:
-      description: |-
-        UnLink Datas
-        <br>
-      operationId: GenericController.UnLink
-      parameters:
-      - description: Value of the table
-        in: path
-        name: table
-        required: true
-        type: string
-      - description: Value of the totable
-        in: path
-        name: totable
-        required: true
-        type: string
-      - description: needed on a rows level request (value=all for post/put method
-          or a get/delete all)
-        in: query
-        name: rows
-        type: string
-      - description: needed on a columns level request (POST/PUT/DELETE with no rows
-          query params) will set up a view on row level (show only expected columns)
-        in: query
-        name: columns
-        type: string
-      - description: sets up a sql order in query (don't even try to inject you little
-          joker)
-        in: query
-        name: orderby
-        type: string
-      - description: sets up a sql direction in query (ex.ASC|DESC) (don't even try
-          to inject you little joker)
-        in: query
-        name: dir
-        type: string
-      - description: activate a lightest response (name only)
-        in: query
-        name: shallow
-        type: string
-      - description: set 'enable' to activate a response without the main response
-          format (only available if super admin)
+          format
         in: query
         name: rawview
         type: string
